tests/baselines/reference/declInput-2.errors.txt
declInput-2.ts(14,28): error TS2322: Type 'null' is not assignable to type 'E'.
declInput-2.ts(15,29): error TS2322: Type 'null' is not assignable to type 'I1'.
declInput-2.ts(16,29): error TS2322: Type 'null' is not assignable to type 'I2'.


==== declInput-2.ts (3 errors) ====
    module M {
        class C { }
        export class E {}
        export interface I1 {}
        interface I2 {}
        export class D {
            private c: C; // don't generate
            public m1: number;
            public m2: string;
            public m22: C; // don't generate
            public m23: E;
            public m24: I1;
            public m25: I2; // don't generate
            public m232(): E { return null;}
                               ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'E'.
            public m242(): I1 { return null; }
                                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I1'.
            public m252(): I2 { return null; } // don't generate
                                ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'I2'.
            public m26(i:I1) {}
            public m262(i:I2) {}
            public m3():C { return new C(); }
        }
    }